--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "@vercel/analytics": "^1.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
